# switch

./: .env.example  .gitignore  AGENTS.md  PORT_PLAN.md  README.md  TODO.md  bridge.py  close-session.py  dispatchers.example.json  dispatchers.json  docker-compose.weaver.yml  logs.sh  md  opencode.example.json  opencode.json  pyproject.toml  requirements.txt  run.sh  session-shell.sh  sessions.sh  spawn-session.py  start.sh  stop.sh  utils.py  xmpp-opencode-bridge.service
.opencode/: opencode.json  opencode.json.example
backups/2026-03-09/: agentchan-credentials.json  claude-settings.local.json
docs/: architecture.md  commands.md  loom-dispatcher.md  memory.md  setup.md
docs/diagrams/: opencode-runner.mermaid  session-message-flow.mermaid  system.mermaid
scripts/: loopback.py  reap-sessions.sh  sessions.sh  setup_loom.sh  setup_weaver.sh  smoke.py  smoke.sh  spawn-session.py  sync-to-opencode.py
skills/: .gitignore  close-sessions.md  code-simplifier.md  spawn-session.md
src/: attachments.py  attachments_config.py  attachments_server.py  bridge.py  claude_runner.py  db.py  delegation.py  dispatcher.py  engines.py  helpers.py  manager.py  opencode_runner.py  ralph.py  session_bot.py  utils.py
src/attachments/: __init__.py  config.py  store.py
src/bots/: directory.py  dispatcher.py  ralph_mixin.py  session.py
src/commands/: __init__.py  handler.py  handlers.py  registry.py
src/core/: __init__.py
src/db/: __init__.py  locks.py  schema.py  signals.py
src/lifecycle/: sessions.py
src/runners/: __init__.py  base.py  claude.py  pipeline.py  ports.py  (+3 more)
(+77 files in other folders)
