[project]
name = "switch"
version = "0.1.0"
description = "Chat with AI coding assistants from any XMPP client"
requires-python = ">=3.11"
dependencies = [
    "slixmpp>=1.8.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
